<resources>
    <string name="app_name">AppUpdater</string>

    <string name="ignore">Ignore</string>
    <string name="simple_one_click_background_upgrade">Simple one-click background upgrade</string>
    <string name="one_click_monitoring_progress_upgrade">One-click monitoring progress upgrade</string>
    <string name="system_pop_up_window_upgrade">System pop-up window upgrade</string>
    <string name="simple_pop_up_window_upgrade">Simple pop-up window upgrade</string>
    <string name="simple_custom_pop_up_box_upgrade">Simple custom pop-up box upgrade</string>
    <string name="custom_pop_up_box_cache_upgrade_first">Custom pop-up box, cache upgrade first</string>
    <string name="simple_dialogfragment_upgrade">Simple DialogFragment upgrade</string>
    <string name="cancel_download">Cancel download</string>
    <string name="upgrade">Upgrade</string>
</resources>
